--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
         <plugin.azure.webapp.version>0.1.3</plugin.azure.webapp.version>
 
         <!-- configurable properties -->
-        <docker.image.prefix>put-your-docker-registry-url</docker.image.prefix>
-        <azure.app.name>todo-app-${maven.build.timestamp}</azure.app.name>
+        <docker.image.prefix>javademoacr.azurecr.io</docker.image.prefix>
+        <azure.app.name>mikes-todo-app-${maven.build.timestamp}</azure.app.name>
     </properties>
 
     <dependencyManagement>
@@ -112,7 +112,7 @@
                 <artifactId>azure-webapp-maven-plugin</artifactId>
                 <version>${plugin.azure.webapp.version}</version>
                 <configuration>
-                    <resourceGroup>java-on-azure</resourceGroup>
+                    <resourceGroup>javademo</resourceGroup>
                     <appName>${azure.app.name}</appName>
                     <region>westus</region>
                     <pricingTier>s1</pricingTier>
