Update DocumentDB name and DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-azure.documentdb.uri=@env.DOCUMENTDB_URI@
-azure.documentdb.key=@env.DOCUMENTDB_KEY@
-azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
+#azure.documentdb.uri=@env.DOCUMENTDB_URI@
+#azure.documentdb.key=@env.DOCUMENTDB_KEY@
+#azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
+
+azure.documentdb.uri=https://javademo.documents.azure.com:443/
+azure.documentdb.database=todo-items
