Add DocumentDB and AAD connection info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
-azure.documentdb.uri=put-your-documentdb-uri-here
-azure.documentdb.key=put-your-documentdb-key-here
-azure.documentdb.database=put-your-documentdb-databasename-here
+#azure.documentdb.uri=@env.DOCUMENTDB_URI@
+#azure.documentdb.key=@env.DOCUMENTDB_KEY@
+#azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
+
+# Connection info for Cosmos DB
+azure.documentdb.uri=https://javademo.documents.azure.com:443/
+azure.documentdb.database=todo-items
+
+# Connection info for AAD
+azure.activedirectory.clientId=03505d6e-4ed5-441b-8dab-612cea78b921
+azure.activedirectory.clientSecret=@env.AAD_PASSWORD@
+
+# Mapped to Spring Security roles objects, which can be used to manage access to app resources
+azure.activedirectory.active-directory-groups=javademoappusers
